--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="vIdMHdkqeuYL4VEAj3TUhJ9L_O27XcwlkXn2GHMCFCw" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Arihant Cabs - Premium Travel</title>
