--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Arihant Cabs - Premium Travel</title>
-
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
