--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
   <meta name="google-site-verification" content="vIdMHdkqeuYL4VEAj3TUhJ9L_O27XcwlkXn2GHMCFCw" />
   <meta charset="UTF-8" />
- 
+ <meta
+  name="description"
+  content="Arihant Cabs Giridih offers trusted taxi service, car rental, outstation and pilgrimage trips. Call 7979852978 for instant booking."
+/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Arihant Cabs - Premium Travel</title>
+  <title>Arihant Cabs Giridih | Taxi Service & Car Rental</title>
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -57,6 +60,26 @@
 
   <!-- App CSS -->
   <link rel="stylesheet" href="/index.css" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TaxiService",
+  "name": "Arihant Cabs",
+  "url": "https://arihant-orcin.vercel.app",
+  "telephone": "+91-7979852978",
+  "areaServed": {
+    "@type": "AdministrativeArea",
+    "name": "Giridih, Jharkhand"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Giridih",
+    "addressRegion": "Jharkhand",
+    "addressCountry": "IN"
+  },
+  "priceRange": "₹₹"
+}
+  </script>
 </head>
 
 <body class="bg-[#fafafa] text-slate-900">
