Add ad container and script to index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
   <!-- ✅ AD CONTAINER (SCRIPT SE PEHLE) -->
   
-
+<div id="container-a5cdffbd76c47fdaa331afc05ac5cf86"></div>
+  <script async="async" data-cfasync="false" src="https://pl28341445.effectivegatecpm.com/a5cdffbd76c47fdaa331afc05ac5cf86/invoke.js"></script>
   <!-- ✅ SINGLE VITE ENTRY (IMPORTANT) -->
   <script type="module" src="/index.tsx"></script>
 </body>
