Add Google AdSense account meta tag
Added Google AdSense account meta tag for monetization.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta name="google-site-verification" content="vIdMHdkqeuYL4VEAj3TUhJ9L_O27XcwlkXn2GHMCFCw" />
+  <meta name="google-adsense-account" content="ca-pub-3296878002885773">
   <meta charset="UTF-8" />
  <meta
   name="description"
